// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderBar HeaderBar - should create snapshot (game) 1`] = `
<div
  className="container"
>
  <div
    className="border-top row"
  >
    <div
      className="text-center small col"
    >
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <a
          href=""
          onClick={[Function]}
        >
          Leaderboards
            
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="text-center small col"
    >
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <a
          href=""
          onClick={[Function]}
        >
          Lineups
            
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="text-center small col"
    >
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <a
          href=""
          onClick={[Function]}
        >
          Reports
            
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="text-center small col"
    >
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <a
          href=""
          onClick={[Function]}
        >
          Charts
            
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="small col-1"
    >
      <div>
        <a
          href="https://hoop-explorer.blogspot.com/p/blog-page.html"
          target="_blank"
        >
          Blog...
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeaderBar HeaderBar - should create snapshot (lineup) 1`] = `
<div
  className="container"
>
  <div
    className="border-top row"
  >
    <div
      className="text-center small col"
    >
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <a
          href=""
          onClick={[Function]}
        >
          Leaderboards
            
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="text-center small col"
    >
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <a
          href=""
          onClick={[Function]}
        >
          On/Off
            
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="text-center small col"
    >
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <a
          href=""
          onClick={[Function]}
        >
          Reports
            
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="text-center small col"
    >
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <a
          href=""
          onClick={[Function]}
        >
          Charts
            
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="small col-1"
    >
      <div>
        <a
          href="https://hoop-explorer.blogspot.com/p/blog-page.html"
          target="_blank"
        >
          Blog...
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeaderBar HeaderBar - should create snapshot (report) 1`] = `
<div
  className="container"
>
  <div
    className="border-top row"
  >
    <div
      className="text-center small col"
    >
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <a
          href=""
          onClick={[Function]}
        >
          Leaderboards
            
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="text-center small col"
    >
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <a
          href=""
          onClick={[Function]}
        >
          On/Off
            
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="text-center small col"
    >
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <a
          href=""
          onClick={[Function]}
        >
          Lineups
            
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="text-center small col"
    >
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <a
          href=""
          onClick={[Function]}
        >
          Reports
            
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="text-center small col"
    >
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <a
          href=""
          onClick={[Function]}
        >
          Charts
            
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 "
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="small col-1"
    >
      <div>
        <a
          href="https://hoop-explorer.blogspot.com/p/blog-page.html"
          target="_blank"
        >
          Blog...
        </a>
      </div>
    </div>
  </div>
</div>
`;
